fix scrollbar colours and border radius

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -50,7 +50,7 @@ html {
 
   &::-webkit-scrollbar-thumb {
     background: $orangeWeb;
-    border-radius: 12px;
+    border-radius: 6px;
     border: 2px solid $richBlack; // Creates padding effect
 
     &:hover {
